ammend recommendations and conclusion

--- a/Syriatel_churn_analysis.ipynb
+++ b/Syriatel_churn_analysis.ipynb
@@ -3947,7 +3947,8 @@
    "source": [
     "1.Focus on Total Day Charge and Total Evening Charge:\n",
     "\n",
-    "Features such as \"total day charge\" and \"total eve charge\" have significant importance in predicting churn.\n",
+    "An observation was made that when the average \"total day charge\" went above 29 dollars and \"total eve charge\" of above 17 dollars the ratio of churn rate customers was higher than those that did not churn. \"total day charge\" and total eve charge\" have shown significant importance in the prediction of  churn.\n",
+    "\n",
     "The company should analyze pricing strategies for daytime and evening usage, ensuring they are competitive and aligned with customer expectations. Consider offering customizable plans or incentives to reduce charges during peak hours.\n",
     "\n",
     "2.Improve Customer Service Quality:\n",
@@ -3967,8 +3968,7 @@
     "\n",
     "5.Address Area Code Specific Concerns:\n",
     "\n",
-    "While area code features have relatively low importance, they still contribute to predicting churn.\n",
-    "Conduct targeted surveys or customer outreach to identify any area-specific issues or preferences. Tailor marketing strategies or service offerings to address the unique needs of customers in specific geographic areas, potentially improving customer satisfaction and loyalty."
+    "While area code features have relatively low importance, they still contribute to predicting churn.for example in the area_code 415 syritel should consider conducting targeted surveys or customer outreach to identify the area-specific issues or preferences. Tailor marketing strategies or service offerings to address the unique needs of customers in the various specific geographic areas, potentially improving customer satisfaction and loyalty."
    ]
   },
   {
@@ -3984,7 +3984,7 @@
    "id": "abffbd88",
    "metadata": {},
    "source": [
-    "In conclusion, the project provides a solid foundation for the telecommunications company to develop and implement data-driven strategies aimed at reducing churn, improving customer satisfaction, and ultimately driving business growth."
+    "In conclusion, the project provides a solid foundation for the telecommunications company to develop and implement data-driven strategies aimed at reducing churn from the current  rate of approximately 14.5%, which according to telecommunications research is a high churn rate.  this in turn will improve customer satisfaction, and ultimately drive business growth."
    ]
   },
   {
@@ -4000,7 +4000,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my (learn-env)",
+   "display_name": "Python (learn-env)",
    "language": "python",
    "name": "learn-env"
   },
@@ -4014,7 +4014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
